correct spacing applied

--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,6 @@ li {
   width: 220px;
   margin-left: auto;
   margin-right: auto;
-  flex: 45px 45px 45px 45px 45px;
 }
 
 .link8 {
